[add] buttons that i forgot

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
       </div>
 
-      <div class="container_sb container-fluid container-md pt-0 text-white">
+      <div class="container_sb container-fluid container-md pt-0 pb-0 text-white">
         <div class="row">
           <div class="col d-md-flex fs-3 ">
 
@@ -180,12 +180,18 @@
               The downnload includes the complete source files including HTML, CSS and JavaScript as well as optional LESS stylesheets for for easy customization.
             </div>
 
-            <div class="p-4">
+            <div class="px-4 pt-4">
               Whether you're a student looking to show case your work, a professional looking to attracts clients, or a graphic artist looking to share your project, this tamplate is the perfect starting point.
             </div>
 
           </div>
         </div>
+      </div>
+
+      <div class="container_sb container-fluid container-md pt-0 text-center">
+        <button type="button" class="btn btn-outline-light btn-lg">
+          <span><i class="fa-solid fa-download pe-2"></i> DOWNLOAD </span>
+        </button>
       </div>
 
     </section>
@@ -208,13 +214,17 @@
         </div>
       </div>
 
-      <div class="container_sb container-fluid container-md pt-0">
-        <div class="form p-4">
+      <div class="container_sb container-fluid container-md pt-0 pb-0">
+        <div class="form px-4 pt-4">
           <input type="text" class="form-control fs-4 p-3" placeholder="Name">
           <input type="email" class="form-control fs-4 p-3" placeholder="Email Address">
           <input type="text" class="form-control fs-4 p-3" placeholder="Phone Number">
           <textarea class="form-control fs-4 p-3" placeholder="Message" id="floatingTextarea" rows="5"></textarea>
         </div>
+      </div>
+
+      <div class="container_sb container-fluid container-md ps-4">
+        <input class="btn btn-primary btn-lg btn_send" type="submit" value="Send">
       </div>
 
     </section>
